--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "format-json-keys",
+  "name": "json-key-formatter",
   "version": "1.0.0",
   "description": "Replaces the keys found in a JSON object with the provided values.",
   "main": "index.js",
