--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,11 +34,10 @@ jobs:
       - name: Setup Node.js for semantic-release
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x' # `semantic-release` için gereken Node.js sürümü
+          node-version: '20.x'
           cache: 'npm'
-          registry-url: 'https://registry.npmjs.org/'
       - run: npm ci
       - run: npm run semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
