--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js for semantic-release
