--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
     needs: build
     permissions:
       contents: write
+      issues: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js for semantic-release
